--- a/src/components/slideshow.css
+++ b/src/components/slideshow.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     height: 50vh;
+    margin-top: 5vh;
 }
 
 .slideshow {
